--- a/qr-rush/index.html
+++ b/qr-rush/index.html
@@ -1,26 +1,52 @@
 <!DOCTYPE html>
 <html lang="en-US">
 	<head>
-	<style>
-		canvas, h1 {
-			display: block;
-			margin: 8px auto;
-			font-family: sans-serif;
-			text-align: center;
-		}
-		.center {
-			text-align: center;
-		}
-	</style>
-	<script src="https://cdn.jsdelivr.net/npm/jsqr@1.3.1/dist/jsQR.min.js"></script>
+		<meta name="viewport" content="width=device-width,initial-scale=1"/>
+		<style>
+			canvas:not([hidden]) {
+				display: block;
+				margin: 8px auto;
+				box-shadow: 0 0 16px 8px white;
+				border-radius: 16px;
+			}
+			h1 {
+				margin: 8px auto;
+				text-align: center;
+			}
+			.center {
+				text-align: center;
+			}
+			body {
+				background-color: black;
+				font-family: sans-serif;
+				color: lightgray;
+			}
+			button {
+				font-size: 2.5em;
+				padding: 12px 18px;
+				border: 4px solid lightgray;
+				outline: none;
+				border-radius: 16px;
+				background-color: gray;
+				color: white;
+			}
+			button:hover {
+				opacity: 0.8;
+			}
+			button:active {
+				opacity: 0.5;
+			}
+		</style>
+		<script src="https://cdn.jsdelivr.net/npm/jsqr@1.3.1/dist/jsQR.min.js"></script>
 	</head>
 	<body>
-		<br/>
-		<div id="loadingMessage" class="center">🎥 Please make sure camera access is allowed<br/><br/><button>Start Camera</button></div>
+		<br/><br/>
+		<div id="loadingMessage" class="center"><h1>🎥 Please make sure camera access is allowed</h1><br/><br/><button>Start Camera</button></div>
 		<canvas id="canvas" hidden width="240"></canvas>
 		<div id="output" hidden>
 			<div id="outputMessage" style="display:none;">No QR code detected.</div>
 			<div hidden><b>Data:</b> <span id="outputData"></span></div>
+			<br/>
 			<h1>Scanned: 0</h1>
 			<h1>Points: 0</h1>
 		</div>
