--- a/qr-rush/index.html
+++ b/qr-rush/index.html
@@ -8,6 +8,7 @@
 				margin: 8px auto;
 				box-shadow: 0 0 16px 8px white;
 				border-radius: 16px;
+				animation-duration: 1.5s;
 			}
 			h1 {
 				margin: 8px auto;
@@ -33,21 +34,43 @@
 			button:hover {
 				opacity: 0.8;
 			}
-			button:active {
+			button:active, button[disabled] {
 				opacity: 0.5;
+			}
+			@keyframes scanned {
+				0% {
+					box-shadow: 0 0 16px 8px lime;
+				}
+				35% {
+					box-shadow: 0 0 16px 8px lime;
+				}
+				100% {
+					box-shadow: 0 0 16px 8px white;
+				}
+			}
+			@keyframes already-scanned {
+				0% {
+					box-shadow: 0 0 16px 8px orange;
+				}
+				35% {
+					box-shadow: 0 0 16px 8px orange;
+				}
+				100% {
+					box-shadow: 0 0 16px 8px white;
+				}
 			}
 		</style>
 		<script src="https://cdn.jsdelivr.net/npm/jsqr@1.3.1/dist/jsQR.min.js"></script>
 	</head>
 	<body>
-		<br/><br/>
-		<div id="loadingMessage" class="center"><h1>🎥 Please make sure camera access is allowed</h1><br/><br/><button>Start Camera</button></div>
+		<br/>
+		<div id="loadingMessage" class="center"><br/><h1>🎥 Please make sure camera access is allowed</h1><br/><br/><button>Start Camera</button></div>
 		<canvas id="canvas" hidden width="240"></canvas>
 		<div id="output" hidden>
 			<div id="outputMessage" style="display:none;">No QR code detected.</div>
 			<div hidden><b>Data:</b> <span id="outputData"></span></div>
 			<br/>
-			<h1>Scanned: 0</h1>
+			<h1 id="scanned-count">Scanned: 0</h1>
 			<h1>Points: 0</h1>
 		</div>
 		<script>
@@ -72,12 +95,18 @@
 
 			// Use facingMode: environment to attempt to get the front camera on phones
 			startBtn.onclick = function(){
-				startBtn.hidden = true;
+				startBtn.disabled = true;
 				navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } }).then(function(stream) {
-				video.srcObject = stream;
-				video.setAttribute("playsinline", true); // required to tell iOS safari we don't want fullscreen
-				video.play();
-				requestAnimationFrame(tick);
+					startBtn.hidden = true;
+					startBtn.disabled = false;
+					video.srcObject = stream;
+					video.setAttribute("playsinline", true); // required to tell iOS safari we don't want fullscreen
+					video.play();
+					requestAnimationFrame(tick);
+				}).catch(function(){
+					alert("Unable to start camera");
+					startBtn.hidden = false;
+					startBtn.disabled = false;
 				});
 			};
 
@@ -105,10 +134,17 @@
 						outputMessage.hidden = true;
 						//outputData.parentElement.hidden = false;
 						scannedCodes.push(outputData.innerText = code.data);
+						canvasElement.style.animationName = "scanned";
+						setTimeout(()=>{canvasElement.style.animationName = "";},1550);
+						document.getElementById("scanned-count").innerHTML = "Scanned: " + scannedCodes.length;
 					} else if (code && code.data) {
 						outputMessage.hidden = true;
-						//outputData.parentElement.hidden = false;
 						outputData.innerText = "Already Scanned";
+						//outputData.parentElement.hidden = false;
+						if (canvasElement.style.animationName !== "scanned") {
+							canvasElement.style.animationName = "already-scanned";
+							setTimeout(()=>{canvasElement.style.animationName = "";},1550);
+						}
 					} else {
 						outputMessage.hidden = false;
 						outputData.parentElement.hidden = true;
