--- a/qr-rush/index.html
+++ b/qr-rush/index.html
@@ -49,8 +49,8 @@
 				100% {box-shadow: 0 0 16px 8px white;}
 			}
 			@keyframes invalid-scan {
-				0% {box-shadow: 0 0 16px 8px orange;}
-				35% {box-shadow: 0 0 16px 8px orange;}
+				0% {box-shadow: 0 0 16px 8px red;}
+				35% {box-shadow: 0 0 16px 8px red;}
 				100% {box-shadow: 0 0 16px 8px white;}
 			}
 		</style>
